Actualizadas las traducciones.

--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -146,7 +146,7 @@
     "balance-sheet": "Balance Sheet",
     "balance-sheets": "Balance Sheets",
     "balances": "Balances",
-    "bank-account": "Bank account",
+    "bank-account": "Conto bancario",
     "bank-accounts": "conto in banca",
     "bank-mandate": "bank-mandate",
     "bank-mandate-date": "Data obbligatoria",
@@ -156,7 +156,7 @@
     "big": "big",
     "billing": "Billing",
     "billing-address": "Indirizzo Di Fatturazione",
-    "birth-date": "Birth date",
+    "birth-date": "Data di nascita",
     "birthday": "birthday",
     "block-date": "Block date",
     "blocked": "bloccato",
@@ -301,7 +301,7 @@
     "control-panel": "pannello di controllo",
     "control-panel-decimal-warning": "Advertencia: este cambio se aplicará a los precios de productos, pero también a los totales de facturas, asientos, etc.",
     "controller": "controllore",
-    "controller-error": "Controller error",
+    "controller-error": "Errore del controller",
     "controller-not-found": "Controllore non trovato",
     "conversion-rate": "Conversion rate",
     "conversion-rate-not-0": "Il tasso di conversione non può essere 0.",
@@ -320,7 +320,7 @@
     "counterpart": "Offsetting",
     "countries": "paesi",
     "country": "Nazione",
-    "country-not-in-eu": "El %codiso% no pertenece a ningún país de la unión Europea",
+    "country-not-in-eu": "Il %codiso% non appartiene a nessun paese dell'Unione Europea",
     "create": "create",
     "create-accounting-entry": "Create Accounting Entry",
     "create-delivery-note": "Crear albarán",
@@ -423,7 +423,7 @@
     "desc-alfa-code-3": "Identificazione ufficiale per nome di paesi e altre unità amministrative",
     "desc-business-name": "Nome ufficiale del cliente, per fatture e altri documenti.",
     "desc-business-name-2": "Nome fiscale o legale del cliente",
-    "desc-customer-name": "Name by which the customer is known. For internal use.",
+    "desc-customer-name": "Nome con cui è conosciuto il cliente. Per uso interno.",
     "desc-parent-family": "Indica se la famiglia è raggruppata in un altro livello superiore.",
     "desc-payment-days": "Esempio: 1,15,31",
     "desc-provicer-business-name-2": "Nome commerciale del provider Descriptio 2",
@@ -648,7 +648,7 @@
     "full-path": "Percorso completo",
     "gap-found": "Hueco encontrado para el número %numero%, día %fecha%, %codserie% y empresa %idempresa%",
     "general": "Generale",
-    "general-concepts": "General concepts",
+    "general-concepts": "Concetti generali",
     "general-data": "informazioni generali",
     "generate": "Generate",
     "generate-accounting-entries": "Generar asientos",
@@ -869,7 +869,7 @@
     "list": "Lista",
     "load-def-acc-plan": "load-def-acc-plan",
     "loading-controller": "Controller di caricamento: '0'",
-    "location": "Location",
+    "location": "Posizione",
     "lock-accounting": "lock-accounting",
     "lock-entry": "lock-entry",
     "lock-invoice": "lock-invoice",
@@ -964,7 +964,7 @@
     "month-8": "Agosto",
     "month-9": "Septiembre",
     "month-name": "Month Name",
-    "month-wildcard-info": "Current month (of the current date)",
+    "month-wildcard-info": "Mese corrente (della data corrente)",
     "monthly": "Monthly",
     "monthly-payment": "Pago mensual",
     "months": "months",
@@ -1048,7 +1048,7 @@
     "open": "open",
     "open-exercise": "open-exercise",
     "open-tab": "Abrir en una nueva pestaña",
-    "opened": "Opened",
+    "opened": "Aperto",
     "opening-acounting-completed": "opening-acounting-completed",
     "opening-operation": "Apertura",
     "operation": "Operación",
@@ -1102,7 +1102,7 @@
     "payments": "Pagamenti",
     "pct": "% pct",
     "pct-irpf": "% IRPF",
-    "pct-surcharge": "Surcharge rate",
+    "pct-surcharge": "% Sovrapprezzo",
     "pct-tax": "% impuestos",
     "pct-vat": "% IVA",
     "pending": "pending",
@@ -1609,8 +1609,8 @@
     "which-logs-store": "Which logs store",
     "width": "width",
     "wildcard": "Wildcard",
-    "wildcard-general-info": "It will be replaced by the corresponding value",
-    "wildcard-title": "Replaceable wildcards by value",
+    "wildcard-general-info": "Verrà sostituito dal valore corrispondente",
+    "wildcard-title": "Wildcard sostituibili per valore",
     "without-closure": "without-closure",
     "without-domicile": "without-domicile",
     "without-groups": "Senza gruppo",
@@ -1627,7 +1627,7 @@
     "x-operation": "Operazione X",
     "y-column": "Colonna Y",
     "year": "Anno",
-    "year-wildcard-info": "Current year (from the current date)",
+    "year-wildcard-info": "Anno corrente (dalla data corrente)",
     "yearly": "Annuale",
     "years": "Anni",
     "yes": "se",
