--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -1388,6 +1388,7 @@
     "specials-actions": "Specials Actions",
     "spreadsheet-xls": "XLS-Datei",
     "standard": "standard",
+    "start": "Inicio",
     "start-date": "Anfangsdatum",
     "start-hour": "Hora de inicio",
     "start-time": "start-time",
