--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -1388,6 +1388,7 @@
     "specials-actions": "Ekintza bereziak",
     "spreadsheet-xls": "XLS artxiboa",
     "standard": "Estandarra",
+    "start": "Hasiera",
     "start-date": "Hasiera data",
     "start-hour": "Hasiera ordua",
     "start-time": "Hasiera ordua",
