--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -1388,6 +1388,7 @@
     "specials-actions": "Actions spéciales",
     "spreadsheet-xls": "Fichier XLS",
     "standard": "Standard",
+    "start": "Départ",
     "start-date": "Date de début",
     "start-hour": "Hora de inicio",
     "start-time": "Heure de départ",
