--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -1388,6 +1388,7 @@
     "specials-actions": "Accións especiais",
     "spreadsheet-xls": "Arquivo XLS",
     "standard": "Estándar",
+    "start": "Inicio",
     "start-date": "Data de inicio",
     "start-hour": "Hora de inicio",
     "start-time": "Hora de comezo",
