--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -1388,6 +1388,7 @@
     "specials-actions": "Accions especials",
     "spreadsheet-xls": "Fitxer XLS",
     "standard": "Estàndard",
+    "start": "Inicio",
     "start-date": "Data d'inici",
     "start-hour": "Hora de inicio",
     "start-time": "Hora d'inici",
