--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -1388,6 +1388,7 @@
     "specials-actions": "Specials Actions",
     "spreadsheet-xls": "XLS file",
     "standard": "standard",
+    "start": "Start",
     "start-date": "Start date",
     "start-hour": "Start hour",
     "start-time": "Start time",
