--- a/Core/Translation/es_UY.json
+++ b/Core/Translation/es_UY.json
@@ -1388,6 +1388,7 @@
     "specials-actions": "Acciones especiales",
     "spreadsheet-xls": "Archivo Excel",
     "standard": "standard",
+    "start": "Inicio",
     "start-date": "Fecha de inicio",
     "start-hour": "Hora de inicio",
     "start-time": "Hora inicio",
