--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -1388,6 +1388,7 @@
     "specials-actions": "Specials Actions",
     "spreadsheet-xls": "File XLS",
     "standard": "standard",
+    "start": "Inicio",
     "start-date": "Data d'inizio",
     "start-hour": "Hora de inicio",
     "start-time": "start-time",
