--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -1388,6 +1388,7 @@
     "specials-actions": "Specials Actions",
     "spreadsheet-xls": "Arquivo XLS",
     "standard": "standard",
+    "start": "Inicio",
     "start-date": "Data de início",
     "start-hour": "Hora de inicio",
     "start-time": "start-time",
