--- a/Core/Translation/es_UY.json
+++ b/Core/Translation/es_UY.json
@@ -1595,6 +1595,7 @@
     "version": "Versión",
     "video": "Video",
     "vies-check-success": "El número '%vat-number%' está registrado en el sistema VIES",
+    "view-api": "Ver API",
     "view-column-net-subtotal": "Ver columna subtotal o neto",
     "warehouse": "Almacén",
     "warehouse-cant-be-same": "El almacén de origen y de destino no pueden ser el mismo",
