--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -1595,6 +1595,7 @@
     "version": "Bertsioa",
     "video": "Video",
     "vies-check-success": "El número '%vat-number%' está registrado en el sistema VIES",
+    "view-api": "Ver API",
     "view-column-net-subtotal": "Zutabean azpi-totala edo garbia ikusi",
     "warehouse": "Biltegia",
     "warehouse-cant-be-same": "Jatorrizko eta helmugako biltegiak ezin dira berdinak izan.",
