--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -1595,6 +1595,7 @@
     "version": "Versión",
     "video": "Vídeo",
     "vies-check-success": "O múmero '%vat-number%' está rexistrado no sistema VIES",
+    "view-api": "Ver API",
     "view-column-net-subtotal": "Ver columna subtotal ou neto",
     "warehouse": "Almacén",
     "warehouse-cant-be-same": "O almacén de orixe e destino non pode ser o mesmo.",
