--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -1595,6 +1595,7 @@
     "version": "Versió",
     "video": "Video",
     "vies-check-success": "El número '%vat-number%' está registrado en el sistema VIES",
+    "view-api": "Ver API",
     "view-column-net-subtotal": "Ver columna subtotal o neto",
     "warehouse": "Magatzem",
     "warehouse-cant-be-same": "L'almagasém d'orige i el de destí no poden ser el mateix.",
