--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -1595,6 +1595,7 @@
     "version": "Version",
     "video": "Video",
     "vies-check-success": "El número '%vat-number%' está registrado en el sistema VIES",
+    "view-api": "Ver API",
     "view-column-net-subtotal": "Ver columna subtotal o neto",
     "warehouse": "Entrepôt",
     "warehouse-cant-be-same": "L'entrepôt d'origine et de destination ne peut pas être le même.",
