--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -1595,6 +1595,7 @@
     "version": "versione",
     "video": "Video",
     "vies-check-success": "El número '%vat-number%' está registrado en el sistema VIES",
+    "view-api": "Ver API",
     "view-column-net-subtotal": "Ver columna subtotal o neto",
     "warehouse": "Magazzino",
     "warehouse-cant-be-same": "Il magazzino di origine e destinazione non può essere lo stesso.",
