--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -1595,6 +1595,7 @@
     "version": "Versão",
     "video": "Video",
     "vies-check-success": "El número '%vat-number%' está registrado en el sistema VIES",
+    "view-api": "Ver API",
     "view-column-net-subtotal": "Ver columna subtotal o neto",
     "warehouse": "Armazém",
     "warehouse-cant-be-same": "O armazém de origem e destino não pode ser o mesmo.",
