--- a/Core/Data/Lang/ES/roles_access.csv
+++ b/Core/Data/Lang/ES/roles_access.csv
@@ -1,64 +1,44 @@
 "codrole";"pagename";onlyownerdata;allowdelete;allowexport;allowimport
-"employee";"AdminPlugins";false;true;true;true
-"employee";"ApiRoot";false;true;true;true
-"employee";"ConfigEmail";false;true;true;true
 "employee";"CopyModel";false;true;true;true
 "employee";"Dashboard";false;true;true;true
 "employee";"DocumentStitcher";false;true;true;true
 "employee";"EditAgenciaTransporte";false;true;true;true
-"employee";"EditAgente";false;true;true;true
 "employee";"EditAlbaranCliente";false;true;true;true
 "employee";"EditAlbaranProveedor";false;true;true;true
 "employee";"EditAlmacen";false;true;true;true
-"employee";"EditApiKey";false;true;true;true
 "employee";"EditAsiento";false;true;true;true
 "employee";"EditAtributo";false;true;true;true
 "employee";"EditAttachedFile";false;true;true;true
 "employee";"EditCliente";false;true;true;true
 "employee";"EditConceptoPartida";false;true;true;true
 "employee";"EditContacto";false;true;true;true
-"employee";"EditCronJob";false;true;true;true
 "employee";"EditCuenta";false;true;true;true
 "employee";"EditCuentaBanco";false;true;true;true
 "employee";"EditCuentaEspecial";false;true;true;true
 "employee";"EditDiario";false;true;true;true
-"employee";"EditDivisa";false;true;true;true
 "employee";"EditEjercicio";false;true;true;true
-"employee";"EditEmailNotification";false;true;true;true
 "employee";"EditEmailSent";false;true;true;true
-"employee";"EditEmpresa";false;true;true;true
-"employee";"EditEstadoDocumento";false;true;true;true
 "employee";"EditFabricante";false;true;true;true
 "employee";"EditFacturaCliente";false;true;true;true
 "employee";"EditFacturaProveedor";false;true;true;true
 "employee";"EditFamilia";false;true;true;true
 "employee";"EditFormaPago";false;true;true;true
-"employee";"EditFormatoDocumento";false;true;true;true
 "employee";"EditGrupoClientes";false;true;true;true
 "employee";"EditImpuesto";false;true;true;true
-"employee";"EditLogMessage";false;true;true;true
-"employee";"EditPageOption";false;true;true;true
-"employee";"EditPais";false;true;true;true
 "employee";"EditPedidoCliente";false;true;true;true
 "employee";"EditPedidoProveedor";false;true;true;true
 "employee";"EditPresupuestoCliente";false;true;true;true
 "employee";"EditPresupuestoProveedor";false;true;true;true
 "employee";"EditProducto";false;true;true;true
 "employee";"EditProveedor";false;true;true;true
-"employee";"EditProvincia";false;true;true;true
 "employee";"EditReciboCliente";false;true;true;true
 "employee";"EditReciboProveedor";false;true;true;true
 "employee";"EditRetencion";false;true;true;true
-"employee";"EditRole";false;true;true;true
-"employee";"EditSecuenciaDocumento";false;true;true;true
 "employee";"EditSerie";false;true;true;true
-"employee";"EditSettings";false;true;true;true
 "employee";"EditSubcuenta";false;true;true;true
 "employee";"EditTarifa";false;true;true;true
-"employee";"EditUser";false;true;true;true
-"employee";"EditWorkEvent";false;true;true;true
+"employee";"EditUser";false;false;false;false
 "employee";"ListAgenciaTransporte";false;true;true;true
-"employee";"ListAgente";false;true;true;true
 "employee";"ListAlbaranCliente";false;true;true;true
 "employee";"ListAlbaranProveedor";false;true;true;true
 "employee";"ListAlmacen";false;true;true;true
@@ -68,15 +48,12 @@
 "employee";"ListCliente";false;true;false;true
 "employee";"ListCuenta";false;true;true;true
 "employee";"ListEjercicio";false;true;true;true
-"employee";"ListEmpresa";false;true;true;true
 "employee";"ListFabricante";false;true;true;true
 "employee";"ListFacturaCliente";false;true;true;true
 "employee";"ListFacturaProveedor";false;true;true;true
 "employee";"ListFamilia";false;true;true;true
 "employee";"ListFormaPago";false;true;true;true
 "employee";"ListImpuesto";false;true;true;true
-"employee";"ListLogMessage";false;true;true;true
-"employee";"ListPais";false;true;true;true
 "employee";"ListPedidoCliente";false;true;true;true
 "employee";"ListPedidoProveedor";false;true;true;true
 "employee";"ListPresupuestoCliente";false;true;true;true
@@ -85,9 +62,7 @@
 "employee";"ListProveedor";false;true;true;true
 "employee";"ListSerie";false;true;true;true
 "employee";"ListTarifa";false;true;true;true
-"employee";"ListUser";false;true;true;true
 "employee";"MegaSearch";false;true;true;true
 "employee";"ReportProducto";false;true;true;true
 "employee";"ReportTaxes";false;true;true;true
 "employee";"SendMail";false;true;true;true
-"employee";"Updater";false;true;true;true
