--- a/Core/Translation/es_DO.json
+++ b/Core/Translation/es_DO.json
@@ -200,6 +200,7 @@
     "cant-delete-default-tax": "No se puede eliminar el impuesto predeterminado",
     "cant-delete-default-warehouse": "No se puede eliminar el almacén por defecto",
     "cant-delete-last-user": "No se puede eliminar al último usuario",
+    "cant-delete-variant-with-documents": "No se puede eliminar el producto o variante %reference% porque ya ha sido comprado o vendido. Pero puede bloquearlo si lo desea.",
     "cant-load-controller": "No se puede cargar el controlador '%controllerName%'.",
     "cant-modify-reference": "Imposible modificar la referencia.",
     "cant-remove-accounting-entry": "No se puede eliminar el asiento",
