--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -409,6 +409,7 @@
     "delete-closing": "delete-closing",
     "delete-data": "Delete data",
     "delete-file": "delete-file",
+    "delete-logs": "Eliminar historial",
     "delete-opening": "delete-opening",
     "delete-record": "Remover registro",
     "deleted-model": "Eliminado %model% (%key%) %desc%",
