--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -409,6 +409,7 @@
     "delete-closing": "Eliminar assentaments de tancament",
     "delete-data": "Borrar senyes",
     "delete-file": "Esborrar arxiu",
+    "delete-logs": "Eliminar historial",
     "delete-opening": "Eliminar l'assentament d'obertura",
     "delete-record": "Borrar el registre",
     "deleted-model": "Eliminat %model% (%key%) %desc%",
