Tarea #3166 - vincular archivos existentes a documentos

--- a/Core/Translation/es_ES.json
+++ b/Core/Translation/es_ES.json
@@ -1248,6 +1248,7 @@
     "regularization-operation": "Regularización",
     "reject": "Rechazar",
     "rejected": "Rechazado",
+    "relate-file": "Relacionar archivo",
     "related": "Relacionado",
     "related-subaccount-bank-charges": "Subcuenta relacionada para gastos bancarios (comisiones, etc)",
     "related-subaccount-purchases-sales": "Subcuenta relacionada para compras y ventas",
