Mejorado el instalador para recordar los datos del formulario. Y reemplazada la pantalla de error cuando no puede conectar a la base de datos.

--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -1453,6 +1453,7 @@
     "supplier-products": "Productes del proveïdor",
     "supplier-reference": "Referència del proveïdor",
     "suppliers": "Proveïdors",
+    "support": "Suport",
     "supported-tax-re-subaccount": "Subcompte recàrrec suportat",
     "supported-tax-subaccount": "Subcompte d'IVA suportat",
     "surcharge": "Recàrrec",
