--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -1453,6 +1453,7 @@
     "supplier-products": "Productos del proveedor",
     "supplier-reference": "Referencia de proveedor",
     "suppliers": "Proveedores",
+    "support": "Soporte",
     "supported-tax-re-subaccount": "Subcuenta recargo soportado",
     "supported-tax-subaccount": "Subcuenta impuesto soportado",
     "surcharge": "Recargo",
