--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -1453,6 +1453,7 @@
     "supplier-products": "Lieferantenprodukte",
     "supplier-reference": "Lieferantenreferenz",
     "suppliers": "Lieferanten",
+    "support": "Soporte",
     "supported-tax-re-subaccount": "Subcuenta recargo soportado",
     "supported-tax-subaccount": "supported-tax-subaccount",
     "surcharge": "Zuschlag",
