--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -1453,6 +1453,7 @@
     "supplier-products": "Supplier products",
     "supplier-reference": "Supplier reference",
     "suppliers": "Suppliers",
+    "support": "Support",
     "supported-tax-re-subaccount": "Supported surcharge subaccount",
     "supported-tax-subaccount": "Supported tax subaccount",
     "surcharge": "Surcharge",
