--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -1453,6 +1453,7 @@
     "supplier-products": "Hornitzailearen produktuak",
     "supplier-reference": "Hornitzailearen erreferentzia",
     "suppliers": "Hornitzaileak",
+    "support": "Soporte",
     "supported-tax-re-subaccount": "Subcuenta recargo soportado",
     "supported-tax-subaccount": "Jasandako BEZ azpikontua",
     "surcharge": "Errekargua",
