--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -1453,6 +1453,7 @@
     "supplier-products": "Produtos provedores",
     "supplier-reference": "Referencia do provedor",
     "suppliers": "Provedores",
+    "support": "Soporte",
     "supported-tax-re-subaccount": "Subconta recargo soportado",
     "supported-tax-subaccount": "Subconta IVE soportado",
     "surcharge": "Recarga",
