--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -1453,6 +1453,7 @@
     "supplier-products": "Prodotti del fornitore",
     "supplier-reference": "Riferimento del fornitore",
     "suppliers": "fornitori",
+    "support": "Soporte",
     "supported-tax-re-subaccount": "Subcuenta recargo soportado",
     "supported-tax-subaccount": "supported-tax-subaccount",
     "surcharge": "Sovraccarico",
