--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -1453,6 +1453,7 @@
     "supplier-products": "Produtos de fornecedor",
     "supplier-reference": "Referência do fornecedor",
     "suppliers": "Fornecedores",
+    "support": "Soporte",
     "supported-tax-re-subaccount": "Subcuenta recargo soportado",
     "supported-tax-subaccount": "supported-tax-subaccount",
     "surcharge": "Sobretaxa",
