--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -1453,6 +1453,7 @@
     "supplier-products": "Productes del proveïdor",
     "supplier-reference": "Referència del proveïdor",
     "suppliers": "Proveïdors",
+    "support": "Soporte",
     "supported-tax-re-subaccount": "Subcuenta recargo soportado",
     "supported-tax-subaccount": "Subconte del IVA soportat",
     "surcharge": "Recàrrec",
