--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -1453,6 +1453,7 @@
     "supplier-products": "Produits du fournisseur",
     "supplier-reference": "Référence du fournisseur",
     "suppliers": "Fournisseurs",
+    "support": "Soporte",
     "supported-tax-re-subaccount": "Subcuenta recargo soportado",
     "supported-tax-subaccount": "Sous-compte de la taxe d'amont",
     "surcharge": "Surtaxe",
