Actualizadas las traducciones.

--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -1364,6 +1364,7 @@
     "show-pending-remittances": "Mostrar remeses pendents",
     "show-price": "Mostra preu en la impressió",
     "show-quantity": "Mostra quantitat en la impressió",
+    "show-section-new": "Mostrar sección crear",
     "signature": "Signatura",
     "simple": "Simple",
     "simplified": "Simplificada",
