--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -1364,6 +1364,7 @@
     "show-pending-remittances": "Mostrar remesas pendientes",
     "show-price": "Show price on print",
     "show-quantity": "Show quantity on print",
+    "show-section-new": "Mostra sezione creazione",
     "signature": "Signature",
     "simple": "Semplice",
     "simplified": "Simplificada",
