--- a/Core/Translation/es_EC.json
+++ b/Core/Translation/es_EC.json
@@ -100,7 +100,7 @@
     "apc-get-key-item": "Elemento obtenido '%item%' desde APC.",
     "apc-set-key-item": "Elemento asignado '%item%' a APC.",
     "api": "API",
-    "api-disabled": "API desactivada. Puede activarla desde preferencias de aplicación.",
+    "api-disabled": "API desactivada. Puede activarla desde el panel de control",
     "api-key": "API key",
     "api-keys": "API Keys",
     "api-version-not-found": "Versión de API no encontrada",
