Pequeñas correcciones al último PR.

--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -100,7 +100,7 @@
     "apc-get-key-item": "Obtingut element '%item%' des APC.",
     "apc-set-key-item": "Assignat element '%item%' a APC.",
     "api": "API",
-    "api-disabled": "Api desactivada. Pot activar-la des de preferències d'aplicació",
+    "api-disabled": "API desactivada. Podeu activar-la des del tauler de control",
     "api-key": "API key",
     "api-keys": "API Keys",
     "api-version-not-found": "Versió de API no trobada",
@@ -1364,7 +1364,7 @@
     "show-pending-remittances": "Mostrar remeses pendents",
     "show-price": "Mostra preu en la impressió",
     "show-quantity": "Mostra quantitat en la impressió",
-    "show-section-new": "Mostrar sección crear",
+    "show-section-new": "Mostra la secció crear",
     "signature": "Signatura",
     "simple": "Simple",
     "simplified": "Simplificada",
