--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -451,6 +451,7 @@
     "disable": "Desactivar",
     "disable-plugins": "Desactivar els plugins",
     "disabled": "S'ha desactivat",
+    "disabled-plugins": "Plugins desactivados",
     "discharge-date": "Data d'emissió: %date%",
     "discount": "Descompte",
     "display": "Visualització",
@@ -515,6 +516,7 @@
     "enable-api": "Activa API",
     "enable-updates-beta": "Activar actualitzacions beta",
     "enabled": "Actiu",
+    "enabled-plugins": "Plugins activos",
     "encrypt": "Xifrar",
     "end-date": "Data de finalització",
     "end-time": "Hora de finalització",
@@ -1148,6 +1150,7 @@
     "plugins": "Plugins",
     "plugins-p": "Els plugins permeten afegir noves funcions.  Activa els que necessitis ara, o fes-ho des del menú administrador.",
     "points": "punts",
+    "points-of-interest": "Puntos de interés",
     "port": "Port",
     "position": "Càrrec",
     "positive-balance": "Saldo positiu",
@@ -1481,6 +1484,7 @@
     "tax-transport": "Impostos del transport",
     "taxes": "Impostos",
     "telemetry-data-to-send": "Les instal·lacions registrades notifiquen periòdicament la versió de FacturaScripts, PHP, país, idioma i llistat de plugins.",
+    "telephone-prefix": "Prefijo telefónico",
     "template": "Plantilla",
     "template-error": "Error a la plantilla",
     "template-not-found": "Template no trobat",
@@ -1647,5 +1651,6 @@
     "you-should-change-passwd": "Hauria de canviar la seva contrasenya",
     "your": "El vostre",
     "zip-code": "Codi Postal",
+    "zip-codes": "Códigos postales",
     "zip-error-wrong-structure": "L'estructura del zip és incorrecta. Ha de contenir la carpeta del plugin i solament un plugin."
 }
