--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -451,6 +451,7 @@
     "disable": "Ezgaitu",
     "disable-plugins": "Desactivar plugins",
     "disabled": "Ezgaitua",
+    "disabled-plugins": "Plugins desactivados",
     "discharge-date": "Alta data: %date%",
     "discount": "Beherapena",
     "display": "Bistaratzea",
@@ -515,6 +516,7 @@
     "enable-api": "APIa gaitu",
     "enable-updates-beta": "Aktibatu beta eguneraketak",
     "enabled": "Aktiboa",
+    "enabled-plugins": "Plugins activos",
     "encrypt": "Enkriptatzea",
     "end-date": "Amaiera data",
     "end-time": "Amaierako ordua",
@@ -1148,6 +1150,7 @@
     "plugins": "Pluginak",
     "plugins-p": "Pluginak funtzio berriak gehitzeko aukera ematen dute. Aktibatu behar dituzunak orain, edo nahi duzunean administratzailearen menutik.",
     "points": "Puntuak",
+    "points-of-interest": "Puntos de interés",
     "port": "Ataka",
     "position": "Kargua",
     "positive-balance": "Saldo positiboa",
@@ -1481,6 +1484,7 @@
     "tax-transport": "Garraioaren zergak",
     "taxes": "Zergak",
     "telemetry-data-to-send": "Erregistratutako instalazioek aldizka FacturaScripts-en bertsio, PHP, herrialdea, hizkuntza eta plugin zerrenden berri ematen dute.",
+    "telephone-prefix": "Prefijo telefónico",
     "template": "Txantiloi",
     "template-error": "Txantiloi errorea",
     "template-not-found": "Ez da txantiloia aurkitu",
@@ -1647,5 +1651,6 @@
     "you-should-change-passwd": "Zure pasahitza aldatu beharko zenuen",
     "your": "Zure",
     "zip-code": "Posta Kodea",
+    "zip-codes": "Códigos postales",
     "zip-error-wrong-structure": "Zip-aren egitura okerra da. Pluginaren karpeta eta plugin bakarra izan behar ditu."
 }
