--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -451,6 +451,7 @@
     "disable": "disattivare",
     "disable-plugins": "Desactivar plugins",
     "disabled": "Disabilitato",
+    "disabled-plugins": "Plugins desactivados",
     "discharge-date": "Data di scarico: 0",
     "discount": "Sconto",
     "display": "Visualizza",
@@ -515,6 +516,7 @@
     "enable-api": "Attiva API",
     "enable-updates-beta": "Activar actualizaciones beta",
     "enabled": "Abilitato",
+    "enabled-plugins": "Plugins activos",
     "encrypt": "Crittazione",
     "end-date": "Data di fine",
     "end-time": "end-time",
@@ -1148,6 +1150,7 @@
     "plugins": "Plugins",
     "plugins-p": "Los plugins permiten añadir nuevas funciones. Activa los que necesites ahora, o bien hazlo cuando quieras desde el menú administrador.",
     "points": "Punti",
+    "points-of-interest": "Puntos de interés",
     "port": "Puerto",
     "position": "Posizione",
     "positive-balance": "positive-balance",
@@ -1481,6 +1484,7 @@
     "tax-transport": "Trasporto fiscale",
     "taxes": "Le tasse",
     "telemetry-data-to-send": "telemetry-data-to-send",
+    "telephone-prefix": "Prefijo telefónico",
     "template": "Modello",
     "template-error": "template-error",
     "template-not-found": "Modello non trovato",
@@ -1647,5 +1651,6 @@
     "you-should-change-passwd": "È consigliabile cambiare la password",
     "your": "Il tuo",
     "zip-code": "Cap",
+    "zip-codes": "Códigos postales",
     "zip-error-wrong-structure": "La struttura del file ZIP è incorretta. Può contenere solamente la cartella del plugin e solamente un plugin."
 }
